<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="launcher_music_play">Launcher music play</string>
    <string name="external_media">external media</string>
    <string name="temp_test">temp_test</string>
    <string name="design_sample">design sample</string>
    <string name="open_view_demo">open view demo</string>
    <string name="rxjava_test">rxjava_test</string>
    <string name="recyclerviewadaptertest">recyclerViewAdapterTest</string>
</resources>
