<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/launcher_music_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_music_play"/>

    <Button
        android:id="@+id/external_meida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/external_media"/>

    <Button
        android:id="@+id/temp_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_test"/>

    <Button
        android:id="@+id/design_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/design_sample"/>

    <Button
        android:id="@+id/view_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_view_demo"/>

    <Button
        android:id="@+id/rxjava_test"
        android:text="@string/rxjava_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/recycler_view_adapter_test"
        android:text="@string/recyclerviewadaptertest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>